--- a/services.html
+++ b/services.html
@@ -2,16 +2,54 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Услуги — Золотарь 58</title>
+  <title>Услуги — Золотарь 58 | Ассенизатор, откачка и прочистка канализации в Пензе</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Услуги ассенизатора в Пензе: аварийная прочистка и откачка канализации, гидродинамика, обслуживание организаций. Без выходных, 24/7.">
+  <meta name="description" content="Полный список услуг компании Золотарь 58: откачка канализации, чистка труб, ассенизатор, аварийный выезд, обслуживание септиков и многое другое в Пензе и области.">
+  <meta name="keywords" content="ассенизатор, услуги, откачка канализации, прочистка труб, Пенза, аварийная откачка, ассенизаторские услуги, чистка колодцев, откачка выгребных ям, обслуживание септика, гидродинамическая прочистка, видеоинспекция труб, услуги ассенизатора, Золотарь 58">
   <meta property="og:title" content="Услуги — Золотарь 58">
-  <meta property="og:description" content="Аварийная прочистка и откачка канализации, гидродинамика, диагностика, обслуживание организаций. Пенза и область.">
-  <meta property="og:image" content="logo.png">
+  <meta property="og:description" content="Ассенизаторские услуги, откачка и чистка канализации, аварийный выезд по Пензе и области.">
+  <meta property="og:image" content="https://zolotar58.ru/logo.png">
+  <meta property="og:url" content="https://zolotar58.ru/services.html">
+  <meta property="og:type" content="website">
   <link rel="icon" type="image/png" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <link rel="canonical" href="https://zolotar58.ru/services.html">
+  <!-- Микроразметка Schema.org для Service -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Service",
+    "serviceType": "Ассенизаторские услуги, откачка и прочистка канализации",
+    "provider": {
+      "@type": "LocalBusiness",
+      "name": "Золотарь 58",
+      "image": "https://zolotar58.ru/logo.png",
+      "telephone": "+7-902-207-36-36",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "ул. Пушанина, 46а",
+        "addressLocality": "Пенза",
+        "addressCountry": "Россия"
+      }
+    },
+    "areaServed": {
+      "@type": "City",
+      "name": "Пенза"
+    },
+    "hasOfferCatalog": {
+      "@type": "OfferCatalog",
+      "name": "Основные услуги",
+      "itemListElement": [
+        { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Откачка канализации" } },
+        { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Прочистка труб и канализации" } },
+        { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Обслуживание септиков и выгребных ям" } },
+        { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Аварийный выезд 24/7" } },
+        { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Гидродинамическая и механическая чистка" } },
+        { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Видеоинспекция труб" } }
+      ]
+    }
+  }
+  </script>
 </head>
 <body>
   <header class="header">
@@ -22,7 +60,7 @@
       </a>
       <a href="index.html" class="header-title-mobile">Золотарь 58</a>
       <nav class="nav">
-        <a href="services.html">Услуги</a>
+        <a href="services.html" class="active">Услуги</a>
         <a href="about.html">О компании</a>
         <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
@@ -32,105 +70,91 @@
       </button>
     </div>
   </header>
+
+  <div class="working-now-bar">
+    <span style="margin-right: 8px;">💧</span> Работаем сейчас &nbsp;<span style="font-size:1.15em;">•</span>&nbsp; Пушанина 46а, Пенза
+  </div>
+
   <main>
-    <section class="main-intro" style="margin-top:35px;">
-      <h1>Наши услуги</h1>
-      <p class="main-subtitle" style="margin-bottom:24px;">Полный спектр работ по откачке и прочистке канализации, диагностике и обслуживанию сетей.</p>
-    </section>
-    <section class="services-list">
-      <div class="service-card">
-        <img src="emergency-cleaning.jpg" alt="Аварийная прочистка канализации" class="service-img">
-        <h3>Аварийная прочистка канализации</h3>
-        <p>Быстрая и эффективная помощь при любых засорах. Механическая и гидродинамическая очистка труб.</p>
-      </div>
-      <div class="service-card">
-        <img src="hydrodynamic-cleaning.jpg" alt="Гидродинамическая прочистка" class="service-img">
-        <h3>Гидродинамическая прочистка</h3>
-        <p>Очищаем трубы водой под давлением — быстро, безопасно, долговечно.</p>
-      </div>
-      <div class="service-card">
-        <img src="mechanical.jpg" alt="Механическая прочистка" class="service-img">
-        <h3>Механическая прочистка</h3>
-        <p>Удаляем сложные засоры тросом и спецмашинами. Эффективно даже при старых трубах.</p>
-      </div>
-      <div class="service-card">
-        <img src="septic.jpg" alt="Откачка ям, септиков, биотуалетов" class="service-img">
-        <h3>Откачка ям, септиков, биотуалетов</h3>
-        <p>Быстро и аккуратно откачиваем любые объёмы — до 12 куб.м за выезд. Илосос, санитарная обработка.</p>
-      </div>
-      <div class="service-card">
-        <img src="video.jpg" alt="Видеоинспекция канализации" class="service-img">
-        <h3>Видеоинспекция канализации</h3>
-        <p>Осмотр труб камерой — выявляем все скрытые проблемы, предоставляем отчёт.</p>
-      </div>
-      <div class="service-card">
-        <img src="search.jpg" alt="Поиск скрытых колодцев" class="service-img">
-        <h3>Поиск скрытых колодцев</h3>
-        <p>Находим скрытые элементы канализации для ремонта и обслуживания.</p>
-      </div>
-      <div class="service-card">
-        <img src="service-org.jpg" alt="Обслуживание организаций" class="service-img">
-        <h3>Обслуживание организаций</h3>
-        <p>Регулярное сервисное обслуживание предприятий. Официальные договора и отчётность.</p>
-      </div>
+    <section class="main-intro">
+      <h1>Услуги компании «Золотарь 58»</h1>
+      <p class="main-subtitle">
+        Мы предоставляем весь спектр ассенизаторских услуг в Пензе и области для частных и юридических лиц.<br>
+        Круглосуточно, быстро, с гарантией результата.
+      </p>
     </section>
 
-    <!-- FAQ -->
-    <section class="faq-section">
-      <h2>Частые вопросы</h2>
-      <ul class="faq-list">
-        <li>
-          <span class="faq-q">Сколько стоит аварийная откачка?</span>
-          <span class="faq-a">Цена зависит от объёма работ и удалённости. Позвоните — проконсультируем бесплатно!</span>
-        </li>
-        <li>
-          <span class="faq-q">Сколько времени занимает выезд?</span>
-          <span class="faq-a">Обычно 30-60 минут по Пензе, оперативно приезжаем даже ночью.</span>
-        </li>
-        <li>
-          <span class="faq-q">Есть ли гарантия на услуги?</span>
-          <span class="faq-a">Да, на все работы действует гарантия. Мы всегда дорабатываем, если клиент недоволен.</span>
-        </li>
-        <li>
-          <span class="faq-q">Как оплатить?</span>
-          <span class="faq-a">Можно наличными, картой или по счёту для организаций.</span>
-        </li>
+    <section class="services-list">
+  <div class="service-card">
+    <img src="septic.jpg" alt="Откачка септиков и ям" class="service-img">
+    <h3>Откачка канализации и септиков</h3>
+    <p>Оперативная откачка и вывоз содержимого септиков, выгребных ям, колодцев, ливнёвок и пр. Собственный автопарк.</p>
+  </div>
+  <div class="service-card">
+    <img src="mechanical.jpg" alt="Механическая и гидродинамическая чистка" class="service-img">
+    <h3>Гидродинамическая и механическая чистка</h3>
+    <p>Устраняем засоры труб и канализации профессиональным оборудованием, работаем с любыми диамерами.</p>
+  </div>
+  <div class="service-card">
+    <img src="video.jpg" alt="Видеоинспекция труб" class="service-img">
+    <h3>Видеоинспекция труб</h3>
+    <p>Диагностика состояния трубопроводов камерой, поиск проблем, рекомендации по ремонту.</p>
+  </div>
+  <div class="service-card">
+    <img src="service-org.jpg" alt="Обслуживание организаций" class="service-img">
+    <h3>Обслуживание организаций</h3>
+    <p>Официальные договоры, документы, комплексное обслуживание объектов юр. лиц и управляющих компаний.</p>
+  </div>
+  <div class="service-card">
+    <img src="search.jpg" alt="Аварийный выезд и поиск засоров" class="service-img">
+    <h3>Аварийный выезд 24/7</h3>
+    <p>Быстрая помощь при засорах, затоплениях, сбоях. Работаем по Пензе и области, без выходных.</p>
+  </div>
+  <div class="service-card">
+    <img src="photo_2025-05-31_22-06-25.jpg" alt="Фотоотчет: наша техника" class="service-img">
+    <h3>Реальные фото нашей работы</h3>
+    <p>Мы используем современную технику. Все фото — с реальных объектов клиентов!</p>
+  </div>
+</section>
+
+    <section class="about-text" style="margin-top: 42px;">
+      <h2>Преимущества работы с нами</h2>
+      <ul>
+        <li>Официальный подрядчик по Пензе и области</li>
+        <li>Круглосуточная поддержка</li>
+        <li>Честные цены без скрытых платежей</li>
+        <li>Работаем с частными лицами и организациями</li>
+        <li>Документы для юр. лиц и управляющих компаний</li>
+        <li>Всегда на связи по телефону: <a href="tel:+79022073636" class="phone-link">+7-902-207-36-36</a></li>
       </ul>
     </section>
-
-    <!-- Стрелка "Вверх" -->
-    <button class="scroll-to-top" aria-label="Наверх" onclick="window.scrollTo({top:0,behavior:'smooth'});">
-      ↑
-    </button>
   </main>
+
   <footer>
     <div class="container">
-      <p class="footer-text">© 2025 Золотарь 58 — ИП Зоткин А.И. | Адрес: г. Пенза, ул. Пушанина, 46а</p>
+      <p class="footer-text">
+        © 2025 Золотарь 58 — ИП Зоткин А.И. | Ассенизатор в Пензе, ул. Пушанина, 46а<br>
+        <a href="https://uslugi.yandex.ru/profile/AleksandrZotkin-886001" target="_blank" rel="noopener">Отзывы Яндекс.Услуги</a>
+      </p>
     </div>
   </footer>
-  <script>
-  document.addEventListener("DOMContentLoaded", function () {
-    const burger = document.querySelector('.burger');
-    const nav = document.querySelector('.nav');
-    burger.addEventListener('click', function () {
-      nav.classList.toggle('open');
-      burger.classList.toggle('active');
-    });
-    document.addEventListener('click', function (e) {
-      if (!burger.contains(e.target) && !nav.contains(e.target)) {
-        nav.classList.remove('open');
-        burger.classList.remove('active');
-      }
-    });
 
-    // Стрелка "Вверх"
-    const scrollBtn = document.querySelector('.scroll-to-top');
-    window.addEventListener('scroll', () => {
-      if(window.scrollY > 400) scrollBtn.style.opacity = '1';
-      else scrollBtn.style.opacity = '0';
+  <script>
+    // Бургер меню
+    document.addEventListener("DOMContentLoaded", function () {
+      const burger = document.querySelector('.burger');
+      const nav = document.querySelector('.nav');
+      burger.addEventListener('click', function () {
+        nav.classList.toggle('open');
+        burger.classList.toggle('active');
+      });
+      document.addEventListener('click', function (e) {
+        if (!burger.contains(e.target) && !nav.contains(e.target)) {
+          nav.classList.remove('open');
+          burger.classList.remove('active');
+        }
+      });
     });
-    scrollBtn.style.opacity = '0';
-  });
   </script>
 </body>
 </html>
