--- a/contacts.html
+++ b/contacts.html
@@ -18,22 +18,20 @@
   <link rel="stylesheet" href="style.css">
   <!-- LocalBusiness -->
   <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"LocalBusiness",
-    "name":"Золотарь 58",
-    "image":"https://zolotar58.ru/logo.png",
-    "telephone":"+79022073636",
-    "email":"zolotar58@yandex.ru",
-    "address":{"@type":"PostalAddress","streetAddress":"ул. Пушанина, 46а","addressLocality":"Пенза","addressRegion":"Пензенская область","postalCode":"440000","addressCountry":"Россия"},
-    "geo":{"@type":"GeoCoordinates","latitude":"53.132175","longitude":"45.007491"},
-    "openingHours":"Mo,Tu,We,Th,Fr,Sa,Su 00:00-23:59",
-    "priceRange":"₽₽",
-    "url":"https://zolotar58.ru/"
-  }
+  {"@context":"https://schema.org","@type":"LocalBusiness","name":"Золотарь 58","image":"https://zolotar58.ru/logo.png","telephone":"+79022073636","email":"zolotar58@yandex.ru",
+   "address":{"@type":"PostalAddress","streetAddress":"ул. Пушанина, 46а","addressLocality":"Пенза","addressRegion":"Пензенская область","postalCode":"440000","addressCountry":"Россия"},
+   "geo":{"@type":"GeoCoordinates","latitude":"53.132175","longitude":"45.007491"},
+   "openingHours":"Mo,Tu,We,Th,Fr,Sa,Su 00:00-23:59","priceRange":"₽₽","url":"https://zolotar58.ru/"}
   </script>
 </head>
 <body>
+  <!-- Языковой переключатель + скрытый элемент Google -->
+  <div class="lang-switcher" aria-label="Выбор языка">
+    <button type="button" class="lang-btn" data-lang="ru" title="Русский">🇷🇺 RU</button>
+    <button type="button" class="lang-btn" data-lang="en" title="English">🇬🇧 EN</button>
+  </div>
+  <div id="google_translate_element" class="visually-hidden"></div>
+
   <header class="header" id="sticky-header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
@@ -55,13 +53,14 @@
     <section class="main-intro">
       <h1>Контакты ассенизаторской службы</h1>
       <p class="main-subtitle">Круглосуточный выезд по Пензе и области. Звоните в любое время!</p>
-      <a class="cta" href="tel:+79022073636" aria-label="Позвонить">Позвонить</a>
     </section>
 
     <section class="contacts-section">
       <div class="contacts-box">
         <div class="contact-item">
-          <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/></svg>
+          <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true">
+            <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
+          </svg>
           <div>
             <h3 class="contact-title">Адрес офиса</h3>
             <p class="contact-value">г. Пенза, ул. Пушанина, 46а</p>
@@ -69,23 +68,33 @@
         </div>
 
         <div class="contact-item">
-          <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M20.01 15.38c-1.23 0-2.42-.2-3.53-.56-.35-.12-.74-.03-1.01.24l-1.57 1.97c-2.83-1.35-5.48-3.9-6.89-6.83l1.95-1.66c.27-.28.35-.67.24-1.02-.37-1.11-.56-2.3-.56-3.53 0-.54-.45-.99-.99-.99H4.19C3.65 3 3 3.24 3 3.99 3 13.28 10.73 21 20.01 21c.71 0 .99-.63.99-1.18v-3.45c0-.54-.45-.99-.99-.99z"/></svg>
+          <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true">
+            <path d="M20.01 15.38c-1.23 0-2.42-.2-3.53-.56-.35-.12-.74-.03-1.01.24l-1.57 1.97c-2.83-1.35-5.48-3.9-6.89-6.83l1.95-1.66c.27-.28.35-.67.24-1.02-.37-1.11-.56-2.3-.56-3.53 0-.54-.45-.99-.99-.99H4.19C3.65 3 3 3.24 3 3.99 3 13.28 10.73 21 20.01 21c.71 0 .99-.63.99-1.18v-3.45c0-.54-.45-.99-.99-.99z"/>
+          </svg>
           <div>
             <h3 class="contact-title">Телефон</h3>
-            <p class="contact-value"><a href="tel:+79022073636" class="phone-link">+7 (902) 207-36-36</a></p>
+            <p class="contact-value">
+              <a href="tel:+79022073636" class="phone-link">+7 (902) 207-36-36</a>
+            </p>
           </div>
         </div>
 
         <div class="contact-item">
-          <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>
+          <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true">
+            <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
+          </svg>
           <div>
             <h3 class="contact-title">Email</h3>
-            <p class="contact-value"><a href="mailto:zolotar58@yandex.ru" class="email-link">zolotar58@yandex.ru</a></p>
+            <p class="contact-value">
+              <a href="mailto:zolotar58@yandex.ru" class="email-link">zolotar58@yandex.ru</a>
+            </p>
           </div>
         </div>
 
         <div class="contact-item">
-          <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"/></svg>
+          <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true">
+            <path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"/>
+          </svg>
           <div>
             <h3 class="contact-title">Режим работы</h3>
             <p class="contact-value">Круглосуточно, без выходных</p>
@@ -97,9 +106,8 @@
     <section class="map-section">
       <h2 class="section-title visually-hidden">Мы на карте</h2>
       <div class="map-container">
-        <iframe src="https://yandex.ru/map-widget/v1/?ll=45.007491%2C53.132175&z=17.3&mode=search&ol=geo"
-          width="100%" height="400" loading="lazy" frameborder="0" allowfullscreen="true"
-          aria-label="Карта с расположением офиса на улице Пушанина 46а"></iframe>
+        <iframe src="https://yandex.ru/map-widget/v1/?ll=45.007491%2C53.132175&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgozMDk2MDcwNTIxEjvQoNC-0YHRgdC40Y8sINCf0LXQvdC30LAsINGD0LvQuNGG0LAg0J_Rg9GI0LDQvdC40L3QsCwgNDbQkCIKDa8HNEIVUodUQg%2C%2C&z=17.3"
+          width="100%" height="400" loading="lazy" frameborder="0" allowfullscreen="true" aria-label="Карта с расположением офиса на улице Пушанина 46а"></iframe>
       </div>
     </section>
   </main>
@@ -115,29 +123,56 @@
   </footer>
 
   <script>
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement(
+        {pageLanguage: 'ru', includedLanguages: 'ru,en', autoDisplay: false},
+        'google_translate_element'
+      );
+      var saved = localStorage.getItem('site_lang');
+      if (saved) setTimeout(function(){ setLang(saved); }, 400);
+    }
+    function setLang(lang) {
+      var combo = document.querySelector('select.goog-te-combo');
+      if (!combo) return;
+      combo.value = lang;
+      combo.dispatchEvent(new Event('change'));
+      localStorage.setItem('site_lang', lang);
+      document.querySelectorAll('.lang-btn').forEach(b=>{
+        b.classList.toggle('active', b.dataset.lang === lang);
+      });
+      document.documentElement.setAttribute('lang', lang === 'en' ? 'en' : 'ru');
+    }
+    document.addEventListener('click', function(e){
+      var btn = e.target.closest('.lang-btn');
+      if (!btn) return;
+      e.preventDefault();
+      setTimeout(function(){ setLang(btn.dataset.lang); }, 50);
+    });
+
+    // Бургер
     document.addEventListener("DOMContentLoaded", function() {
       const burger = document.querySelector('.burger');
       const nav = document.querySelector('.nav');
-      burger.addEventListener('click', function(e) {
-        e.stopPropagation();
-        nav.classList.toggle('open');
-        burger.classList.toggle('active');
-        document.body.classList.toggle('no-scroll');
-      });
-      document.addEventListener('click', function(e) {
-        if (!burger.contains(e.target) && !nav.contains(e.target)) {
-          nav.classList.remove('open');
-          burger.classList.remove('active');
-          document.body.classList.remove('no-scroll');
-        }
-      });
+      if (burger && nav) {
+        burger.addEventListener('click', function(e) {
+          e.stopPropagation();
+          nav.classList.toggle('open');
+          burger.classList.toggle('active');
+          document.body.classList.toggle('no-scroll');
+        });
+        document.addEventListener('click', function(e) {
+          if (!burger.contains(e.target) && !nav.contains(e.target)) {
+            nav.classList.remove('open');
+            burger.classList.remove('active');
+            document.body.classList.remove('no-scroll');
+          }
+        });
+      }
     });
 
-    // Ленивая загрузка iframe — базовая (на всякий случай)
-    if ('loading' in HTMLIFrameElement.prototype) {
-      const iframe = document.querySelector('.map-container iframe');
-      if (iframe) iframe.loading = 'lazy';
-    }
+    // Ленивая загрузка iframe уже включена атрибутом loading="lazy"
   </script>
+  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <div id="google_translate_element" class="visually-hidden"></div>
 </body>
 </html>
