--- a/about.html
+++ b/about.html
@@ -32,36 +32,40 @@
   }
   </script>
 </head>
-<body>
+<body class="about-page">
+  <!-- Ссылка пропуска к основному контенту -->
+  <a class="skip-link" href="#main">К основному содержимому</a>
+
   <!-- Языковой переключатель + скрытый элемент Google -->
   <div class="lang-switcher" aria-label="Выбор языка">
-    <button type="button" class="lang-btn" data-lang="ru" title="Русский">🇷🇺 RU</button>
-    <button type="button" class="lang-btn" data-lang="en" title="English">🇬🇧 EN</button>
+    <button type="button" class="lang-btn" data-lang="ru" title="Русский" aria-pressed="true">🇷🇺 RU</button>
+    <button type="button" class="lang-btn" data-lang="en" title="English" aria-pressed="false">🇬🇧 EN</button>
   </div>
-  <div id="google_translate_element" class="visually-hidden"></div>
+  <div id="google_translate_element" class="visually-hidden" aria-hidden="true"></div>
 
-  <header class="header" id="sticky-header">
+  <header class="header" id="sticky-header" role="banner">
     <div class="container header-flex">
-      <a href="index.html" class="logo-link">
+      <a href="index.html" class="logo-link" aria-label="На главную">
         <img src="logo.png" class="logo-img" alt="Золотарь 58 — профессиональные ассенизаторские услуги в Пензе" width="60" height="60">
         <span class="logo-title">Золотарь 58</span>
       </a>
       <a href="index.html" class="header-title-mobile">Золотарь 58</a>
-      <nav class="nav">
-        <a href="services.html">Услуги</a>
-        <a href="about.html" class="active">О компании</a>
-        <a href="licenses.html">Сертификаты</a>
-        <a href="contacts.html">Контакты</a>
+      <nav class="nav" aria-label="Основное меню" id="main-menu">
+        <a href="services.html" class="nav-link">Услуги</a>
+        <a href="about.html" class="nav-link active" aria-current="page">О компании</a>
+        <a href="licenses.html" class="nav-link">Сертификаты</a>
+        <a href="contacts.html" class="nav-link">Контакты</a>
       </nav>
-      <button class="burger" aria-label="Открыть меню"><span></span></button>
+      <button class="burger" aria-label="Открыть меню" aria-expanded="false" aria-controls="main-menu"><span></span></button>
     </div>
   </header>
 
-  <div class="working-now-bar">
-    <span class="working-icon">💧</span> Работаем сейчас <span class="working-separator">•</span> Пушанина 46а, Пенза
+  <div class="working-now-bar" role="status" aria-live="polite">
+    <span class="working-icon" aria-hidden="true">💧</span>
+    Работаем сейчас <span class="dot" aria-hidden="true">•</span> Пушанина 46а, Пенза
   </div>
 
-  <main class="about-page">
+  <main id="main">
     <section class="main-intro">
       <h1>О компании «Золотарь 58»</h1>
       <p class="main-subtitle">
@@ -141,10 +145,10 @@
     </section>
   </main>
 
-  <footer class="footer">
+  <footer class="footer" role="contentinfo">
     <div class="container">
       <p class="footer-text">
-        © 2025 Золотарь 58 — ИП Зоткин А.И.<br>
+        © <span id="year"></span> Золотарь 58 — ИП Зоткин А.И.<br>
         г. Пенза, ул. Пушанина, 46а<br>
         <a href="tel:+79022073636">+7 (902) 207-36-36</a>
       </p>
@@ -156,7 +160,15 @@
     </div>
   </footer>
 
+  <!-- Кнопка вверх -->
+  <button id="toTop" class="to-top" aria-label="Наверх" title="Наверх">
+    <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true">
+      <path d="M12 4l-8 8h6v8h4v-8h6z"></path>
+    </svg>
+  </button>
+
   <script>
+    // ===== Google Translate init =====
     function googleTranslateElementInit() {
       new google.translate.TranslateElement(
         {pageLanguage: 'ru', includedLanguages: 'ru,en', autoDisplay: false},
@@ -171,8 +183,10 @@
       combo.value = lang;
       combo.dispatchEvent(new Event('change'));
       localStorage.setItem('site_lang', lang);
-      document.querySelectorAll('.lang-btn').forEach(b=>{
-        b.classList.toggle('active', b.dataset.lang === lang);
+      document.querySelectorAll('.lang-btn').forEach(function(b){
+        var isActive = b.dataset.lang === lang;
+        b.classList.toggle('active', isActive);
+        b.setAttribute('aria-pressed', String(isActive));
       });
       document.documentElement.setAttribute('lang', lang === 'en' ? 'en' : 'ru');
     }
@@ -183,37 +197,63 @@
       setTimeout(function(){ setLang(btn.dataset.lang); }, 50);
     });
 
+    // ===== Бургер =====
     document.addEventListener("DOMContentLoaded", function() {
-      const burger = document.querySelector('.burger');
-      const nav = document.querySelector('.nav');
+      var burger = document.querySelector('.burger');
+      var nav = document.querySelector('.nav');
       if (burger && nav) {
-        burger.addEventListener('click', function(e) {
+        burger.addEventListener('click', function(e){
           e.stopPropagation();
-          nav.classList.toggle('open');
-          burger.classList.toggle('active');
-          document.body.classList.toggle('no-scroll');
+          var isOpen = nav.classList.toggle('open');
+          burger.classList.toggle('active', isOpen);
+          burger.setAttribute('aria-expanded', String(isOpen));
+          document.body.classList.toggle('no-scroll', isOpen);
         });
-        document.addEventListener('click', function(e) {
+        document.addEventListener('click', function(e){
           if (!burger.contains(e.target) && !nav.contains(e.target)) {
             nav.classList.remove('open');
             burger.classList.remove('active');
+            burger.setAttribute('aria-expanded', 'false');
             document.body.classList.remove('no-scroll');
           }
         });
       }
+
+      // Год в футере
+      var yearEl = document.getElementById('year');
+      if (yearEl) yearEl.textContent = new Date().getFullYear();
     });
 
-    // Плавная прокрутка якорей (если используются)
-    document.querySelectorAll('a[href^="#"]').forEach(a=>{
+    // ===== Плавная прокрутка якорей (если появятся) =====
+    document.querySelectorAll('a[href^="#"]').forEach(function(a){
       a.addEventListener('click', function(e){
-        const tgt = document.querySelector(this.getAttribute('href'));
+        var tgt = document.querySelector(this.getAttribute('href'));
         if (!tgt) return;
         e.preventDefault();
         tgt.scrollIntoView({behavior:'smooth'});
       });
     });
+
+    // ===== Кнопка "вверх" =====
+    (function(){
+      var toTop = document.getElementById('toTop');
+      if (!toTop) return;
+      var showAt = 220;
+      function onScroll(){
+        if (window.scrollY > showAt) {
+          toTop.classList.add('to-top--visible');
+        } else {
+          toTop.classList.remove('to-top--visible');
+        }
+      }
+      window.addEventListener('scroll', onScroll, { passive: true });
+      toTop.addEventListener('click', function(){
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+      });
+      onScroll();
+    })();
   </script>
+  <!-- Скрипт Google Translate -->
   <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-  <div id="google_translate_element" class="visually-hidden"></div>
 </body>
 </html>
