--- a/contacts.html
+++ b/contacts.html
@@ -24,32 +24,41 @@
    "openingHours":"Mo,Tu,We,Th,Fr,Sa,Su 00:00-23:59","priceRange":"₽₽","url":"https://zolotar58.ru/"}
   </script>
 </head>
-<body>
+<body class="contacts-page">
+  <!-- Ссылка пропуска к основному контенту -->
+  <a class="skip-link" href="#main">К основному содержимому</a>
+
   <!-- Языковой переключатель + скрытый элемент Google -->
   <div class="lang-switcher" aria-label="Выбор языка">
-    <button type="button" class="lang-btn" data-lang="ru" title="Русский">🇷🇺 RU</button>
-    <button type="button" class="lang-btn" data-lang="en" title="English">🇬🇧 EN</button>
+    <button type="button" class="lang-btn" data-lang="ru" title="Русский" aria-pressed="true">🇷🇺 RU</button>
+    <button type="button" class="lang-btn" data-lang="en" title="English" aria-pressed="false">🇬🇧 EN</button>
   </div>
-  <div id="google_translate_element" class="visually-hidden"></div>
+  <div id="google_translate_element" class="visually-hidden" aria-hidden="true"></div>
 
-  <header class="header" id="sticky-header">
+  <header class="header" id="sticky-header" role="banner">
     <div class="container header-flex">
-      <a href="index.html" class="logo-link">
+      <a href="index.html" class="logo-link" aria-label="На главную">
         <img src="logo.png" class="logo-img" alt="Золотарь 58 — ассенизаторские услуги в Пензе" width="60" height="60">
         <span class="logo-title">Золотарь 58</span>
       </a>
       <a href="index.html" class="header-title-mobile">Золотарь 58</a>
-      <nav class="nav">
-        <a href="services.html">Услуги</a>
-        <a href="about.html">О компании</a>
-        <a href="licenses.html">Сертификаты</a>
-        <a href="contacts.html" class="active">Контакты</a>
+      <nav class="nav" aria-label="Основное меню" id="main-menu">
+        <a href="services.html" class="nav-link">Услуги</a>
+        <a href="about.html" class="nav-link">О компании</a>
+        <a href="licenses.html" class="nav-link">Сертификаты</a>
+        <a href="contacts.html" class="nav-link active" aria-current="page">Контакты</a>
       </nav>
-      <button class="burger" aria-label="Открыть меню"><span></span></button>
+      <button class="burger" aria-label="Открыть меню" aria-expanded="false" aria-controls="main-menu"><span></span></button>
     </div>
   </header>
 
-  <main class="contacts-page">
+  <!-- Инфополоса -->
+  <div class="working-now-bar" role="status" aria-live="polite">
+    <span class="working-icon" aria-hidden="true">💧</span>
+    Работаем сейчас <span class="dot" aria-hidden="true">•</span> Пушанина 46а, Пенза
+  </div>
+
+  <main id="main">
     <section class="main-intro">
       <h1>Контакты ассенизаторской службы</h1>
       <p class="main-subtitle">Круглосуточный выезд по Пензе и области. Звоните в любое время!</p>
@@ -103,26 +112,36 @@
       </div>
     </section>
 
-    <section class="map-section">
-      <h2 class="section-title visually-hidden">Мы на карте</h2>
+    <section class="map-section section">
+      <h2 class="visually-hidden">Мы на карте</h2>
       <div class="map-container">
-        <iframe src="https://yandex.ru/map-widget/v1/?ll=45.007491%2C53.132175&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgozMDk2MDcwNTIxEjvQoNC-0YHRgdC40Y8sINCf0LXQvdC30LAsINGD0LvQuNGG0LAg0J_Rg9GI0LDQvdC40L3QsCwgNDbQkCIKDa8HNEIVUodUQg%2C%2C&z=17.3"
-          width="100%" height="400" loading="lazy" frameborder="0" allowfullscreen="true" aria-label="Карта с расположением офиса на улице Пушанина 46а"></iframe>
+        <iframe
+          src="https://yandex.ru/map-widget/v1/?ll=45.007491%2C53.132175&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgozMDk2MDcwNTIxEjvQoNC-0YHRgdC40Y8sINCf0LXQvdC30LAsINGD0LvQuNGG0LAg0J_Rg9GI0LDQvdC40L3QsCwgNDbQkCIKDa8HNEIVUodUQg%2C%2C&z=17.3"
+          width="100%" height="400" loading="lazy" frameborder="0" allowfullscreen="true"
+          aria-label="Карта с расположением офиса на улице Пушанина 46а"></iframe>
       </div>
     </section>
   </main>
 
-  <footer class="footer">
+  <footer class="footer" role="contentinfo">
     <div class="container">
       <p class="footer-text">
-        © 2025 Золотарь 58 — ИП Зоткин А.И.<br>
+        © <span id="year"></span> Золотарь 58 — ИП Зоткин А.И.<br>
         г. Пенза, ул. Пушанина, 46а<br>
         <a href="tel:+79022073636">+7 (902) 207-36-36</a>
       </p>
     </div>
   </footer>
 
+  <!-- Кнопка вверх -->
+  <button id="toTop" class="to-top" aria-label="Наверх" title="Наверх">
+    <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true">
+      <path d="M12 4l-8 8h6v8h4v-8h6z"></path>
+    </svg>
+  </button>
+
   <script>
+    // ===== Google Translate init =====
     function googleTranslateElementInit() {
       new google.translate.TranslateElement(
         {pageLanguage: 'ru', includedLanguages: 'ru,en', autoDisplay: false},
@@ -137,8 +156,10 @@
       combo.value = lang;
       combo.dispatchEvent(new Event('change'));
       localStorage.setItem('site_lang', lang);
-      document.querySelectorAll('.lang-btn').forEach(b=>{
-        b.classList.toggle('active', b.dataset.lang === lang);
+      document.querySelectorAll('.lang-btn').forEach(function(b){
+        var isActive = b.dataset.lang === lang;
+        b.classList.toggle('active', isActive);
+        b.setAttribute('aria-pressed', String(isActive));
       });
       document.documentElement.setAttribute('lang', lang === 'en' ? 'en' : 'ru');
     }
@@ -149,30 +170,53 @@
       setTimeout(function(){ setLang(btn.dataset.lang); }, 50);
     });
 
-    // Бургер
+    // ===== Бургер =====
     document.addEventListener("DOMContentLoaded", function() {
-      const burger = document.querySelector('.burger');
-      const nav = document.querySelector('.nav');
+      var burger = document.querySelector('.burger');
+      var nav = document.querySelector('.nav');
       if (burger && nav) {
-        burger.addEventListener('click', function(e) {
+        burger.addEventListener('click', function(e){
           e.stopPropagation();
-          nav.classList.toggle('open');
-          burger.classList.toggle('active');
-          document.body.classList.toggle('no-scroll');
+          var isOpen = nav.classList.toggle('open');
+          burger.classList.toggle('active', isOpen);
+          burger.setAttribute('aria-expanded', String(isOpen));
+          document.body.classList.toggle('no-scroll', isOpen);
         });
-        document.addEventListener('click', function(e) {
+        document.addEventListener('click', function(e){
           if (!burger.contains(e.target) && !nav.contains(e.target)) {
             nav.classList.remove('open');
             burger.classList.remove('active');
+            burger.setAttribute('aria-expanded', 'false');
             document.body.classList.remove('no-scroll');
           }
         });
       }
+
+      // Год в футере
+      var yearEl = document.getElementById('year');
+      if (yearEl) yearEl.textContent = new Date().getFullYear();
     });
 
-    // Ленивая загрузка iframe уже включена атрибутом loading="lazy"
+    // ===== Кнопка "вверх" =====
+    (function(){
+      var toTop = document.getElementById('toTop');
+      if (!toTop) return;
+      var showAt = 220;
+      function onScroll(){
+        if (window.scrollY > showAt) {
+          toTop.classList.add('to-top--visible');
+        } else {
+          toTop.classList.remove('to-top--visible');
+        }
+      }
+      window.addEventListener('scroll', onScroll, { passive: true });
+      toTop.addEventListener('click', function(){
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+      });
+      onScroll();
+    })();
   </script>
+  <!-- Скрипт Google Translate -->
   <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-  <div id="google_translate_element" class="visually-hidden"></div>
 </body>
 </html>
